<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >
    <TextView
        android:layout_height="40dp"
        android:layout_width="match_parent"
        android:text="@string/myruns2"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_grey"
        />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp" android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/Profile_Photo"
                android:textSize="20sp" />
            <LinearLayout
                android:layout_marginTop="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/image_view"
                    android:layout_width="40dp"
                    android:layout_height="90dp"
                    android:layout_weight="1.7"
                    android:src="@mipmap/ic_launcher" />
                <Button
                    android:id="@+id/change_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Change"
                    android:layout_weight="0.3"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/orange"
                    android:textColor="@color/white"
                    />
            </LinearLayout>
            <TextView
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/Name"
                android:textSize="16sp"/>
            <EditText
                android:id="@+id/edit_name"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/Name_hint"/>

            <TextView
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/Email"
                android:textSize="16sp"/>
            <EditText
                android:id="@+id/edit_email"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/Email_hint"/>

            <TextView
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/Phone"
                android:textSize="16sp"
                />
            <EditText
                android:id="@+id/edit_phone"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/Phone_hint"
                android:inputType="number"/>

            <TextView
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/Gender"
                android:textSize="16sp"/>

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">
                <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Female"
                    android:layout_weight="1"/>
                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Male"
                    android:layout_weight="1"/>
            </RadioGroup>

            <TextView
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/Class"
                android:textSize="16sp"
                />
            <EditText
                android:id="@+id/edit_class"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/Class_hint" />

            <TextView
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/Major"
                android:textSize="16sp"/>
            <EditText
                android:id="@+id/edit_major"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/Major_hint"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">
                <Button
                    android:id="@+id/save_button"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/Save"
                    android:layout_weight="1"
                    android:backgroundTint="@color/green"
                    android:textColor="@android:color/white"
                    />
                <Button
                    android:layout_margin="2dp"
                    android:id="@+id/cancel_button"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/Cancel"
                    android:backgroundTint="@color/dark_grey"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
