<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment"
    android:orientation="vertical"
    android:paddingStart="13dp">

    <!-- TODO: Update blank fragment layout -->
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/accountPreferences"
        android:textColor="@color/teal_700"
        android:textSize="15sp"
        />

    <LinearLayout
        android:id="@+id/userProfile"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_email_class_etc"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userProfile"
            android:textSize="15sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="1dp"
            android:background="@color/light_grey"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/privacySetting"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:paddingTop="10dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_setting"
                android:textSize="18sp"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/posting_your_records_anonymously"
                android:textSize="15sp"
                />
        </LinearLayout>
        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <TextView
        android:layout_marginTop="45dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/additionalSettings"
        android:textColor="@color/teal_700"
        android:textSize="15sp"/>

    <LinearLayout
        android:id="@+id/unitPreference"
        android:layout_marginTop="15dp"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unitPreference"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_height="wrap_content"
            android:text="@string/selectTheUnits"
            android:textSize="15sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="1dp"
            android:background="@color/light_grey"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/comments"
        android:paddingTop="10dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comments"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_your_comments"
            android:textSize="15sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="1dp"
            android:background="@color/light_grey"/>
    </LinearLayout>
    <TextView
        android:layout_marginTop="45dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/misc"
        android:textColor="@color/teal_700"
        android:textSize="15sp"/>

    <LinearLayout
        android:id="@+id/webpage"
        android:paddingTop="10dp"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/webpage"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_height="wrap_content"
            android:text="@string/https_www_sfu_ca_computing_html"
            android:textSize="15sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="1dp"
            android:background="@color/light_grey"/>
    </LinearLayout>
</LinearLayout>