<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">
    <TextView
        android:layout_height="40dp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:text="@string/myruns2"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_grey"
        />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp" android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/input_type"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/inputTypeEditText"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                />

            <TextView
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/activity_type"
                android:textSize="16sp"/>
            <EditText
                android:id="@+id/activityTypeEditText"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                />

            <TextView
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/date_and_time"
                android:textSize="16sp"/>
            <EditText
                android:id="@+id/dateAndTimeEditText"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
               />

            <TextView
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/duration"
                android:textSize="16sp"
                />
            <EditText
                android:id="@+id/durationEditText"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" />

            <TextView
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/distance"
                android:textSize="16sp"/>
            <EditText
                android:id="@+id/distanceEditText"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                />

            <TextView
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/calories"
                android:textSize="16sp"
                />
            <EditText
                android:id="@+id/caloriesEditText"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" />

            <TextView
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/heart_rate"
                android:textSize="16sp"/>
            <EditText
                android:id="@+id/heartRateEditText"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
