<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <fragment
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map_summary"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" />
    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/delete"
        android:textSize="17sp"
        android:padding="4dp"
        android:textColor="@color/white"
        android:background="@color/purple_200"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:padding="16dp">

        <!-- Type -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type" />
            <TextView
                android:id="@+id/typeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <!-- Avg Speed -->
        <LinearLayout
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/avgSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avg_speed" />
            <TextView
                android:id="@+id/avgSpeedValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.0" />
        </LinearLayout>

        <!-- Current Speed -->
        <LinearLayout
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/curSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cur_speed" />
            <TextView
                android:id="@+id/curSpeedValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.0" />
        </LinearLayout>

        <!-- Climb -->
        <LinearLayout
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/climb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/climb" />
            <TextView
                android:id="@+id/climbValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0" />
        </LinearLayout>

        <!-- Calorie -->
        <LinearLayout
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/calorie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calorievalue" />
            <TextView
                android:id="@+id/calorieValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.0" />
        </LinearLayout>

        <!-- Distance -->
        <LinearLayout
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distancee" />
            <TextView
                android:id="@+id/distanceValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.0" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>