<?xml version="1.0" encoding="utf-8"?>
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".StartFragment"-->
<!--    android:orientation="vertical">-->
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/teal_700"
    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/inputType"/>
    <Spinner
        android:id="@+id/inputTypeSpinner"
        android:layout_marginTop="17dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:textSize="15sp"
        android:text="@string/activityType"/>

    <Spinner
        android:id="@+id/activityTypeSpinner"
        android:layout_marginTop="20dp"
        android:textSize="17sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
            <View
                android:layout_width="match_parent"
                android:layout_height="200dp" />
    <Button
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/start"/>
        </LinearLayout>
    </ScrollView>

<!--</LinearLayout>-->