<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/myruns2"
        android:padding="12dp"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <Button
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_margin="2dp"
        android:layout_height="wrap_content"
        android:text="@string/save"

        />
        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_margin="2dp"
            />
    </LinearLayout>
</LinearLayout>


    <!--    <View-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="1dp"-->
    <!--        android:background="@color/light_grey"-->
    <!--        />-->
    <!--    <TextView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/date"-->
    <!--        android:padding="12dp"-->
    <!--        android:textSize="18sp"-->
    <!--        android:clickable="true"-->
    <!--        android:focusable="true"-->
    <!--        android:background="?attr/selectableItemBackground"-->
    <!--        />-->
    <!--    <View-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="1dp"-->
    <!--        android:background="@color/light_grey"-->
    <!--        />-->
    <!--    <TextView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/duration"-->
    <!--        android:padding="12dp"-->
    <!--        android:textSize="18sp"-->
    <!--        android:clickable="true"-->
    <!--        android:focusable="true"-->
    <!--        android:background="?attr/selectableItemBackground"-->
    <!--        />-->
    <!--    <View-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="1dp"-->
    <!--        android:background="@color/light_grey"-->
    <!--        />-->
    <!--    <TextView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/distance"-->
    <!--        android:padding="12dp"-->
    <!--        android:textSize="18sp"-->
    <!--        android:clickable="true"-->
    <!--        android:focusable="true"-->
    <!--        android:background="?attr/selectableItemBackground"-->
    <!--        />-->
    <!--    <View-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="1dp"-->
    <!--        android:background="@color/light_grey"-->
    <!--        />-->
    <!--    <TextView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/calories"-->
    <!--        android:padding="12dp"-->
    <!--        android:textSize="18sp"-->
    <!--        android:clickable="true"-->
    <!--        android:focusable="true"-->
    <!--        android:background="?attr/selectableItemBackground"-->
    <!--        />-->
    <!--    <View-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="1dp"-->
    <!--        android:background="@color/light_grey"-->
    <!--        />-->
    <!--    <TextView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/heart_rate"-->
    <!--        android:padding="12dp"-->
    <!--        android:textSize="18sp"-->
    <!--        android:clickable="true"-->
    <!--        android:focusable="true"-->
    <!--        android:background="?attr/selectableItemBackground"-->
    <!--        />-->
    <!--    <View-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="1dp"-->
    <!--        android:background="@color/light_grey"-->
    <!--        />-->
    <!--    <TextView-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="wrap_content"-->
    <!--    android:text="@string/comment"-->
    <!--        android:padding="12dp"-->
    <!--        android:textSize="18sp"-->
    <!--        android:clickable="true"-->
    <!--        android:focusable="true"-->
    <!--        android:background="?attr/selectableItemBackground"-->
    <!--    />-->
    <!--    <View-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="1dp"-->
    <!--        android:background="@color/light_grey"-->
    <!--        />-->
    <!--    <View-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="0dp"-->
    <!--        android:layout_weight="1" />-->